Squashed commit of the following:
commit 1eb42d7347475df76eb2f46f884d05e9a8055594
Merge: 4e4b5d6237 7dfda8ba63
Author: Hannah Chia <chia.hannahk@gmail.com>
Date:   Thu Mar 31 21:30:13 2022 +0800

    Merge branch 'master' into mb-website

commit 4e4b5d62377caea6287e516f2541399d792ed0fd
Author: Hannah Chia <chia.hannahk@gmail.com>
Date:   Thu Mar 31 21:05:13 2022 +0800

    [#11684] Fix minor typos (#11685)

    * Fix minor typos

    * Remove unnecessary multi-byte characters

commit d495c3b1d67bf178bb5b8189277bf9caa636539e
Author: Samuel Fang <samuelfangjw@gmail.com>
Date:   Tue Mar 29 00:21:23 2022 +0800

    [#11673] Add ESLint rule for member delimiter style (#11675)

commit 808c44518d12da950341ba951c3ebb931010dcea
Author: Mo Zongran <mozongran@gmail.com>
Date:   Mon Mar 28 23:34:00 2022 +0800

    [#11585] Fix unnecessary data read in expected submission count (#11659)

commit 105fa5a67ada96d9c7caf6c1d82b4603de3a40ee
Author: Nicolas Chang Weng Yew <nicolas.chang99@gmail.com>
Date:   Mon Mar 28 18:40:42 2022 +0800

    [#8184] Instructor create session: default questions: replace 'contribution question' (#11613)

commit 446f5beacb19be21b1f42ac41a0f3c4d66d83ae8
Author: Howard Liu <howard@ixnet.work>
Date:   Mon Mar 28 15:45:30 2022 +0800

    [#11621] [#11622] Minor fixes for angular.json and typos (#11672)

commit 351141b9d4d15e826384ccb449b00250f2e37772
Author: Hannah Chia <chia.hannahk@gmail.com>
Date:   Thu Mar 31 20:40:45 2022 +0800

    Remove unneeded images and lines of code

commit f28c10a3fb6a9368c0d7dcdebc7342fe069c0e2d
Author: Hannah Chia <chia.hannahk@gmail.com>
Date:   Mon Mar 28 12:13:12 2022 +0800

    Fix Typo

commit b89277a92a3cf9e56e67aac7c60c807bff946e44
Author: Samuel Fang <samuelfangjw@gmail.com>
Date:   Mon Mar 28 01:00:54 2022 +0800

    [#11674] Fix duplicate time picker option when 23:00 selection (#11677)

commit c779df690ee3bfc0b65e86930d33e05267628ebd
Author: Wilson Kurniawan <wkurniawan.92@gmail.com>
Date:   Sun Mar 27 23:35:57 2022